<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="@dimen/button_connect_width"
        android:layout_height="@dimen/button_control_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@android:drawable/stat_sys_data_bluetooth"
        android:text="@string/connect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIncrease"
        android:layout_width="@dimen/button_control_width"
        android:layout_height="@dimen/button_control_height"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/content_desc_increase_font"
        android:text="@string/increase_font_symbol"
        android:textSize="@dimen/button_increase_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDecrease"
        android:layout_width="@dimen/button_control_width"
        android:layout_height="@dimen/button_control_height"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/content_desc_decrease_font"
        android:text="@string/decrease_font_symbol"
        android:textSize="@dimen/button_decrease_text_size"
        app:layout_constraintEnd_toStartOf="@+id/btnIncrease"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTheme"
        android:layout_width="@dimen/button_control_width"
        android:layout_height="@dimen/button_control_height"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/content_desc_toggle_theme"
        app:layout_constraintEnd_toStartOf="@+id/btnDecrease"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/bpmBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtHeartRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:keepScreenOn="true"
            android:text="@string/bpm_placeholder"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="@dimen/heart_rate_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAverageHeartRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:includeFontPadding="false"
            android:text="@string/average_bpm_placeholder"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="@dimen/average_heart_rate_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtResetHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/reset_average_hint"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="@dimen/reset_hint_text_size" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
